--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/renderer-react": "^0.5.0",
+    "@astrojs/renderer-svelte": "^0.4.0",
     "astro": "^0.23.2"
   }
 }
